--- a/SynTweakEngine/SynPatcher.csproj
+++ b/SynTweakEngine/SynPatcher.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mutagen.Bethesda" Version="0.36.0-pr001" />
-    <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.22.0-pr001" />
+    <PackageReference Include="Mutagen.Bethesda" Version="0.36.0" />
+    <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.22.1" />
   </ItemGroup>
 
 </Project>
